# heroes_CRM

./: .gitignore  pyproject.toml  readme.md
src/: TG_API.py  class_TG_API.py
